# private-exposure

./: .env.example  .gitignore  BFGFX_2024-12-31.csv  DXYZ_2024-12-31.csv  Dockerfile  LICENSE  Makefile  README.md  app.py  application.py  cache.py  docker-compose.yml  fundtools.py  main.py  optimizer.py  pyproject.toml  requirements.txt  todo.txt
assets/: custom.css
cache/: fund_info.parquet  stock_info.parquet
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: FundsTable.tsx  HoldingsTable.tsx  IngestPanel.tsx  OptimizerPanel.tsx  SearchBar.tsx  SearchResults.tsx
frontend/src/pages/: AdminPage.tsx  UserPage.tsx
frontend/src/utils/: holding.ts
src/private_exposure/: main.py  models.py
src/private_exposure/api/: admin.py  deps.py  optimize.py  schemas.py  search.py
src/private_exposure/db/: models.py  session.py
src/private_exposure/schemas/: optimize.py
src/private_exposure/sec/: filings_source.py  fund_catalog.py  fund_service.py  fund_source.py  http.py  nport_source.py
src/private_exposure/services/: alpha_service.py  exposure_builder.py  holdings_service.py  ingest_service.py  optimize_service.py
static/: custom.css  logo(1).png:Zone.Identifier
tests/: test_exposure_builder.py  test_fund_service.py  test_holdings_service.py  test_ingest_service.py  test_nport_parser.py  test_optimize_service.py
